# license-control-suite

./: .gitignore  .graphifyignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: merged_crate_compatibility_report.md  unified_crate_merge_plan.md
docs/baseline/: baseline_checklist.md  check_source_inventory.sh  check_tauri_inventory.sh  dependency_matrix.md  frontend_asset_inventory.md  graphify_inventory.md  implementation_log.md  source_inventory.md  tauri_command_inventory.md
docs/migration/: TC-04.md  TC-05.md  TC-06.md  TC-IPC-01.md  TC-MOD-01.md  TC-MOD-02.md  TC-MOD-03.md  TC-MOD-04.md  TC-MOD-05.md  TC-MOD-06.md  TC-TAURI-01.md  async_mutex_review.md  dependency_decisions.md  final_acceptance_checklist.md  final_regression_report.md  frontend_asset_inventory.md  handoff_summary.md  packaging_smoke.md  runtime_storage_review.md  tauri_capability_review.md
examples/: admin-desktop-console.rs  core-only.rs  desktop-tauri-host.rs  fake-dependency-injection.rs  host-command-composition.rs
examples/admin-desktop-shell/: README.md
examples/admin-desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
examples/admin-desktop-shell/src-tauri/capabilities/: default.json
examples/admin-desktop-shell/src-tauri/src/: main.rs
examples/client-desktop-shell/: README.md
examples/client-desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
examples/client-desktop-shell/src-tauri/capabilities/: default.json
examples/client-desktop-shell/src-tauri/src/: main.rs
fixtures/downstream_consumers/: README.md
fixtures/shared_contracts/: activate_request_minimal.json  admin_verify_response.json  api_error_license_invalid.json  audit_event_admin_auth_succeeded.json  device_reset_status_approved.json
frontend/: README.md
scripts/: baseline.sh  check_all.sh  check_dependencies.sh  check_tauri_capabilities.sh  run_ci_sequence_logged.sh  run_full_verification_logged.sh  tauri_smoke.sh  verify_downstream_consumers.sh
src/: core.rs  lib.rs  main.rs  reference_worker.rs
src/desktop/: admin.rs  mod.rs  persistence.rs  tauri.rs
src/modules/: mod.rs
tests/baseline/: admin_desktop_boundary.rs  canonical_ownership.rs  ci_workflow_sequence.rs  consumer_onboarding_examples.rs  curated_api_boundary.rs  downstream_consumer_harnesses.rs  example_shell_layout.rs  feature_matrix_contract.rs  frontend_source_verification.rs  keyring_validation_contract.rs  main_shell_wiring.rs  module_namespace.rs  packaging_smoke_artifacts.rs  reference_worker_boundary.rs  release_readiness_checklist.rs  script_smoke.rs
tests/contracts/: serialization_overlap.rs  shared_contracts_dto_contract.rs  (+5 more)
(+72 files in other folders)
