[package]
name = "license-control-suite"
version = "0.1.0"
edition = "2021"

[lib]
name = "license_control_suite"
path = "src/lib.rs"

[[bin]]
name = "license-control-suite"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
wiremock = "0.6"
